--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -33,8 +33,8 @@
   <div id="header">
     <h1>
     	<a href="{{ HOME_PATH }}" title="{{ site.title }}">{{ site.title }}</a>
-    	<span class="byline">&larr; <a href="{{ HOME_PATH }}">{{ site.author.name }}</a></span>
     </h1>
+    	<div class="byline">&larr; <a href="{{ HOME_PATH }}">{{ site.author.name }}</a></div>
     <ul class="nav">
       <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
       <li><a  href="/archive.html">Archive</a></li>
@@ -74,19 +74,5 @@
 
   {% include JB/analytics %}
 
-  <!-- Duoshuo Comment BEGIN -->
-  <div class="ds-thread"></div> 
-  <script type="text/javascript">
-      var duoshuoQuery = {short_name:"linbo"};
-      (function() {
-          var ds = document.createElement('script');
-          ds.type = 'text/javascript';ds.async = true;
-          ds.src = 'http://static.duoshuo.com/embed.js';
-          ds.charset = 'UTF-8';
-          (document.getElementsByTagName('head')[0] 
-          || document.getElementsByTagName('body')[0]).appendChild(ds);
-                    })();
-                </script>
-                <!-- Duoshuo Comment END -->    
 </body>
 </html>
