--- a/_includes/themes/mark-reid/post.html
+++ b/_includes/themes/mark-reid/post.html
@@ -22,6 +22,21 @@
     <a href="{{ page.previous.url }}" class="prev" title="{{ page.previous.title }}">&larr; Earlier Post</a>
   {% endif %}
   </div>
+
+  <!-- Duoshuo Comment BEGIN -->
+  <div class="ds-thread"></div> 
+  <script type="text/javascript">
+      var duoshuoQuery = {short_name:"linbo"};
+      (function() {
+          var ds = document.createElement('script');
+          ds.type = 'text/javascript';ds.async = true;
+          ds.src = 'http://static.duoshuo.com/embed.js';
+          ds.charset = 'UTF-8';
+          (document.getElementsByTagName('head')[0] 
+          || document.getElementsByTagName('body')[0]).appendChild(ds);
+            })();
+  </script>
+  <!-- Duoshuo Comment END -->    
   
 </div><!-- End Page -->
 
