--- a/_includes/themes/mark-reid/weekly.html
+++ b/_includes/themes/mark-reid/weekly.html
@@ -15,10 +15,10 @@
   </address>
   
   <div class="prev-next">
-  {% if page.next %}
+  {% if page.next and page.next.title contains "Weekly" %}
   <a href="{{ page.next.url }}" class="next" title="{{ page.next.title }}">{{page.next.title}} &rarr;</a>
   {% endif %}
-  {% if page.previous %}
+  {% if page.previous and page.previous.title contains "Weekly"%}
   <a href="{{ page.previous.url }}" class="prev" title="{{ page.previous.title }}">&larr; {{page.previous.title}}</a>
   {% endif %}
   </div>
