--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -39,12 +39,12 @@
         {% endif %}
     </h1>
     <ul class="nav">
-      <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
-      <li><a  href="/archive.html">Archive</a></li>
-      <li><a  href="/categories.html">Categories</a></li>
+      <li><a class="home" href="{{ HOME_PATH }}">博客</a></li>
+      <li><a  href="/archive.html">所有文章</a></li>
+      <li><a  href="/categories.html">分类</a></li>
       <li><a  href="/tags.html">Tags</a></li>
       <li><a  href="/weekly.html">Weekly</a></li>
-      <li><a  href="/about.html">about</a></li>
+      <li><a  href="/about.html">关于我</a></li>
     </ul>
   </div>
 
